[gd_scene load_steps=10 format=3 uid="uid://cgmqcqv5lrowt"]

[ext_resource type="Texture2D" uid="uid://dt3x8cy8t1ebk" path="res://assets/buttons_and_setting_background/settings background.png" id="1_cebu8"]
[ext_resource type="Script" path="res://settings/settings.gd" id="1_m8o6r"]
[ext_resource type="Theme" uid="uid://cj754d21e4sd0" path="res://themes/s3rpent.tres" id="3_vyqsq"]
[ext_resource type="StyleBox" uid="uid://8xg461r3ur5t" path="res://settings/slider.tres" id="4_1okkk"]
[ext_resource type="FontFile" uid="uid://bck4vn8cx20wc" path="res://assets/fonts/Sagu Exora.ttf" id="5_u345r"]
[ext_resource type="FontFile" uid="uid://bt6a2kq816tsy" path="res://assets/fonts/NotoSans-Regular.ttf" id="6_qt40j"]

[sub_resource type="Gradient" id="Gradient_qy1fv"]
offsets = PackedFloat32Array(0, 0.41133, 0.413793)
colors = PackedColorArray(0.223529, 0.192157, 0.501961, 1, 0.223529, 0.192157, 0.501961, 1, 0.658824, 0.658824, 0.658824, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nv2jh"]
gradient = SubResource("Gradient_qy1fv")
width = 32
height = 32
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7oe47"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.231373, 0.2, 0.52549, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Settings" type="Control" node_paths=PackedStringArray("sfx_slider", "music_slider", "resolution_option_button", "enable_fullscreen_checkbox", "feedback_link_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_vyqsq")
script = ExtResource("1_m8o6r")
sfx_slider = NodePath("Buttons/VBoxContainer/Control/GridContainer/SfxSlider")
music_slider = NodePath("Buttons/VBoxContainer/Control/GridContainer/MusicSlider")
resolution_option_button = NodePath("Buttons/VBoxContainer/Control/GridContainer/ResolutionOptions")
enable_fullscreen_checkbox = NodePath("Buttons/VBoxContainer/Control/GridContainer/CheckBox")
feedback_link_button = NodePath("Buttons/VBoxContainer/Feedback/MarginContainer/Feedback")

[node name="Bg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_cebu8")

[node name="Buttons" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -363.0
offset_top = -413.0
offset_right = 362.0
offset_bottom = 409.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="HBoxContainer" parent="Buttons/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 50
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 42

[node name="VBoxContainer2" type="VBoxContainer" parent="Buttons/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 42

[node name="VBoxContainer3" type="VBoxContainer" parent="Buttons/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 42

[node name="Control" type="Control" parent="Buttons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="Buttons/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 35
columns = 2

[node name="Sfx" type="Label" parent="Buttons/VBoxContainer/Control/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_u345r")
theme_override_font_sizes/font_size = 32
text = "Sfx"
vertical_alignment = 2

[node name="SfxSlider" type="HSlider" parent="Buttons/VBoxContainer/Control/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_icons/grabber = SubResource("GradientTexture2D_nv2jh")
theme_override_icons/grabber_highlight = SubResource("GradientTexture2D_nv2jh")
theme_override_icons/grabber_disabled = SubResource("GradientTexture2D_nv2jh")
theme_override_styles/slider = ExtResource("4_1okkk")
theme_override_styles/grabber_area = ExtResource("4_1okkk")
theme_override_styles/grabber_area_highlight = ExtResource("4_1okkk")
max_value = 1.0
step = 0.01

[node name="Music" type="Label" parent="Buttons/VBoxContainer/Control/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_u345r")
theme_override_font_sizes/font_size = 32
text = "Music"
vertical_alignment = 2

[node name="MusicSlider" type="HSlider" parent="Buttons/VBoxContainer/Control/GridContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_icons/grabber = SubResource("GradientTexture2D_nv2jh")
theme_override_icons/grabber_highlight = SubResource("GradientTexture2D_nv2jh")
theme_override_icons/grabber_disabled = SubResource("GradientTexture2D_nv2jh")
theme_override_styles/slider = ExtResource("4_1okkk")
theme_override_styles/grabber_area = ExtResource("4_1okkk")
theme_override_styles/grabber_area_highlight = ExtResource("4_1okkk")
max_value = 1.0
step = 0.01

[node name="Resolution" type="Label" parent="Buttons/VBoxContainer/Control/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_u345r")
theme_override_font_sizes/font_size = 32
text = "Resolution"
vertical_alignment = 2

[node name="ResolutionOptions" type="OptionButton" parent="Buttons/VBoxContainer/Control/GridContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1
item_count = 2
selected = 0
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1280x720"
popup/item_1/id = 1

[node name="Fullscreen" type="Label" parent="Buttons/VBoxContainer/Control/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_u345r")
theme_override_font_sizes/font_size = 32
text = "Fullscreen"
vertical_alignment = 2

[node name="CheckBox" type="CheckButton" parent="Buttons/VBoxContainer/Control/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="Buttons/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="Buttons/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_u345r")
theme_override_font_sizes/font_size = 41
text = "Feedback"
horizontal_alignment = 1
vertical_alignment = 2

[node name="TextEdit" type="TextEdit" parent="Buttons/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("6_qt40j")
theme_override_font_sizes/font_size = 24
placeholder_text = "placeholder text"
wrap_mode = 1

[node name="Button" type="Button" parent="Buttons/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "Send"

[node name="HSeparator" type="HSeparator" parent="Buttons/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="Feedback" type="Button" parent="Buttons/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(257.38, 67.72)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/disabled = SubResource("StyleBoxFlat_7oe47")
disabled = true
button_mask = 0

[node name="MarginContainer" type="MarginContainer" parent="Buttons/VBoxContainer/Feedback"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Feedback" type="LinkButton" parent="Buttons/VBoxContainer/Feedback/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.858824, 0.0666667, 0.764706, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
disabled = true
text = "Feedback"

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -165.0
offset_right = 270.0
grow_vertical = 0
theme_override_font_sizes/font_size = 51
text = "Back"
flat = true

[node name="FetchFormLink" type="HTTPRequest" parent="."]

[connection signal="item_selected" from="Buttons/VBoxContainer/Control/GridContainer/ResolutionOptions" to="." method="_on_option_button_item_selected"]
[connection signal="toggled" from="Buttons/VBoxContainer/Control/GridContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="button_up" from="Back" to="." method="_on_back_button_up"]
[connection signal="request_completed" from="FetchFormLink" to="." method="_on_fetch_form_link_request_completed"]
